# krbTicketConvertor

./: .gitignore  README.md
KrbConverter/: KrbConverter.csproj  Program.cs  README.md
pkrbconverter/: README.md  pyproject.toml
pkrbconverter/src/: main.py
pkrbconverter/src/krb/: convertor.py
pkrbconverter/tests/: test_convertor.py
pkrbconverter/tests/tmp/: tgt.kirbi
